# ytdlbot

./: .dockerignore  .env.example  .gitignore  .gitmodules  .gitpod.yml  Dockerfile  FAQ.md  FastTelethon.py  Makefile  Procfile  README.md  apk.txt  app.json  bot.py  broadcast.py  config.py  constant.py  db.py  dl_test.py  docker-compose.yml  downloader.py  flower.yml  k8s.md  limit.py  pre-commit.py  pre-push.py  pyproject.toml  requirements.txt  supervisor.conf  utils.py  worker.yml  ytdl.py
.github/: FUNDING.yml
.github/workflows/: builder.yaml  codeql-analysis.yml  upgrade.yml
conf/: YouTube Download Celery-1642084746866.json  YouTube Download Celery.json  supervisor.conf  supervisor_main.conf  supervisor_worker.conf
k8s/: 01.redis.yml  02.mariadb.yml  03.configmap.yml  04.ytdl-master.yml  05.ytdl-worker.yml  06.flower.yml
scripts/: low_id.sh  migrate_to_mysql.py  start.sh  transfer.py
src/: main.py  test.py
src/config/: __init__.py  config.py  constant.py
src/database/: __init__.py  cache.py  model.py
src/engine/: __init__.py  base.py  direct.py  generic.py  helper.py  instagram.py  krakenfiles.py  pixeldrain.py
src/utils/: __init__.py
tools/: migrate_to_mysql.py
ytdlbot/: broadcast.py  channel.py  client_init.py  config.py  constant.py  database.py  db.py  downloader.py  fakemysql.py  flower_tasks.py  index.py  instagram.py  keep_alive.py  limit.py  main.py  migration.sql  payment.py  premium.py  sp_downloader.py  split-video.sh  tasks.py  utils.py  ytdl_bot.py
ytdlbot/config/: config.py  constant.py
ytdlbot/database/: cache.py  model.py
(+13 files in other folders)
